syntax = "proto3";

package go.micro.srv.elasticsearch;

//import "github.com/google/protobuf/src/google/protobuf/any.proto";

service Elasticsearch {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
}

message Record {
  string index = 1;
  string type = 2;
	string id = 3;
	string data = 4;
}


message CreateRequest {
	Record record = 1;
}

message CreateResponse {

}

message ReadRequest {
  string index = 1;
  string type = 2;
	string id = 3;
}

message ReadResponse {
  Record record = 1;
}

message UpdateRequest {
	Record record = 1;
}

message UpdateResponse {

}

message DeleteRequest {
  string index = 1;
  string type = 2;
	string id = 3;
}

message DeleteResponse {

}

message SearchRequest {
  string index = 1;
  string type = 2;
  string query = 3;
  uint64 limit = 4;
  uint64 offset = 5;
}

message SearchResponse {
  string result = 1;
}

message QueryRequest {
  string index = 1;
  string type = 2;
  string query = 3;
}

message QueryResponse {
  string result = 1;
}
